helm/charts/k8s-install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toc-ingress
  labels:
    component: toc
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: toc.devems.blinqnetworks.org
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toc
            port:
              number: 7000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: toc-web-ingress
  labels:
    component: toc-web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: toc1.devems.blinqnetworks.org
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: toc-web-svc
            port:
              number: 8080
